force-app/main/default/objects/User/fields/dfsle__Username__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Username__c</fullName>
    <description>DocuSign Username</description>
    <label>DocuSign Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>