force-app/main/default/objects/User/fields/FS_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Group_Name__c</fullName>
    <description>Name of FS group to which this user belongs, if any.</description>
    <inlineHelpText>Name of FS group to which this user belongs, if any.</inlineHelpText>
    <label>FS Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_Group</valueSetName>
    </valueSet>
</CustomField>