force-app/main/default/objects/User/listViews/BFF_Grants_Community.listView-meta.xml
<ListView>
    <fullName>BFF_Grants_Community</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>BFF Basic Community</value>
    </filters>
    <label>BFF Grants Community</label>
    <language>en_US</language>
</ListView>