force-app/main/default/objects/User/listViews/Invite_Only_Community_Members.listView-meta.xml
<ListView>
    <fullName>Invite_Only_Community_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>By Invite</value>
    </filters>
    <label>Invite Only Community Members</label>
    <language>en_US</language>
</ListView>